tests/ui/invalid_opaque.rs
use pyo3::prelude::*;

#[pyclass(opaque)]
struct MyClass;

fn main() {}
